feat: add authorization, little refactors